@@ -8,6 +8,8 @@
 	- corrected some  supercup definition errors which resulted in
 	crashes
 	- foul probabilities in the live game are more sophisticated now
+	- added a simple GUI for editing Bygfoot constants in the
+	preferences (enabling users to fine-tune the game)
 
 29/01/2009: v2.3.1
 	- added possibility for multiple tables in leagues (think
